Fix badges layout issue in menu

--- a/freight/static/freight/css/kalkoken.css
+++ b/freight/static/freight/css/kalkoken.css
@@ -22,6 +22,11 @@ Global styles shared by all Kalkoken apps - Version 0.3.0
         border-width: 0px;
     }
 
+    /* make badge fit into navs */
+    .badge-nav {
+        font-size: 12px;
+    }
+
     /* Datatables row group headers */
     .template-light-mode .table > tbody > .table-group > td {
         background-color: rgb(105, 105, 105);
